force-app/main/default/objects/Test_Schedule__c/Test_Schedule__c.object-meta.xml
<CustomObject>
    <label>Test Schedule</label>
    <pluralLabel>Test Schedules</pluralLabel>
    <nameField>
        <label>Test Schedule Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>