force-app/main/default/objects/Test_Schedule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Whether this schedule currently has a live scheduled Apex job.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>