force-app/main/default/objects/Test_Schedule__c/fields/Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>Cron_Expression__c</fullName>
    <description
  >The generated Salesforce CRON expression currently scheduled.</description>
    <label>Cron Expression</label>
    <length>100</length>
    <type>Text</type>
</CustomField>