force-app/main/default/objects/Test_Schedule__c/fields/Cron_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Cron_Job_Id__c</fullName>
    <label>Cron Job Id</label>
    <type>Text</type>
    <length>18</length>
    <description
  >Id of the current active CronTrigger (from System.schedule) so it can be aborted on update/deactivate.</description>
</CustomField>