force-app/main/default/objects/Test_Schedule__c/fields/Notification_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Notification_Recipients__c</fullName>
    <description
  >Comma-separated email addresses to receive the completion summary email.</description>
    <label>Notification Recipients</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>