force-app/main/default/objects/Test_Schedule__c/fields/Run_All_Tests__c.field-meta.xml
<CustomField>
    <fullName>Run_All_Tests__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >When true, all Apex test classes in the org are run; otherwise only the related Test_Schedule_Class__c selections run.</description>
    <label>Run All Tests</label>
    <type>Checkbox</type>
</CustomField>