force-app/main/default/objects/Test_Schedule__c/fields/Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_Time__c</fullName>
    <label>Run Time</label>
    <type>Time</type>
    <description
  >Time of day the scheduled tests should start, in the scheduling user's time zone.</description>
</CustomField>