force-app/main/default/objects/Test_Schedule__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description
  >Time zone the schedule runs in, captured automatically from the saving user (System.schedule uses the scheduling user&apos;s time zone). Display only.</description>
    <label>Time Zone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>