force-app/main/default/objects/Test_Schedule__c/fields/Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Tuesday__c</fullName>
    <label>Tuesday</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>